# budget-app

./: README.md
backend/: Cargo.toml  schema.sql
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/components/: item.svelte
frontend/src/routes/: +page.svelte
