[package]
name = "budget"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
rust_decimal = "1.32.0"
serde = { version = "1.0.188", features = ["derive"] }
shuttle-axum = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-shared-db = { version = "0.25.0", features = ["postgres-rustls"] }
sql = "0.4.3"
sqlx = { version = "0.7.1", features = ["postgres", "chrono", "rust_decimal"] }
tokio = "1.28.2"
tower-http = { version = "0.4.4", features = ["cors"] }
